# odds

./: Makefile  README.md  houston-cougars-butler-bulldogs-tISqbm1U.html  pyproject.toml  requirements.txt
data/: all_matches_api_data.json
data/ajax-sport-country-tournament-archive_/: 5-4xTlzXUJ-1-0.json  5-69gXStto-1-0.json
data/ajax-sport-country-tournament-archive_/page/: 5-69gXStto-1-0-page1.json  5-69gXStto-1-0-page2.json  5-69gXStto-1-0-page3.json  5-69gXStto-1-0-page4.json  5-69gXStto-1-0-page5.json  5-69gXStto-1-0-page6.json  5-69gXStto-1-0-page7.json
data/american-footbal/usa/nfl/: cincinnati-bengals-buffalo-bills-Yyi9cnwH.html  (+7 more)
data/feed/match-event/: 1-5-E3C0Iu6A-1-11.json  1-5-E3C0Iu6A-2-1.json  1-5-E3C0Iu6A-2-3.json  1-5-E3C0Iu6A-3-1.json  1-5-E3C0Iu6A-5-1.json  1-5-E3C0Iu6A-5-3.json
src/oddsportal/: __init__.py  config.py  data.py  db.py  match.py  odds.py  team.py  tournament.py  utils.py
tests/integration/: test_average_odds.py  test_issue37.py  test_issue38.py  test_match_date.py  test_match_get_odds.py  test_match_handicap_with_tightest_spread.py  test_tournament.py
tests/unit/: test_data.py  test_match.py  test_match_init_from_url_today.py  test_match_init_from_url_tomorrow.py  test_odds.py  test_team.py  test_tournament.py  test_tournament_all_matches.py  test_tournament_all_matches_api_data.py  test_tournament_all_matches_api_urls.py  test_tournament_all_matches_api_urls_without_odds.py  test_tournament_all_matches_without_odds.py  test_tournament_next_matches.py  test_tournament_seasons.py  test_tournament_without_next_matches.py
(+4 files in other folders)
